--- a/render.yaml
+++ b/render.yaml
@@ -1,54 +1,52 @@
-    # Arquivo de configuração "Blueprint" do Render (Versão Corrigida)
+# Arquivo de configuração "Blueprint" do Render (Versão Final Corrigida)
 services:
-  # 1. O Serviço do Banco de Dados PostgreSQL
+  # O serviço do banco de dados (inalterado)
   - type: pserv
-    name: lojamanager # Mude para um nome único, se desejar
+    name: lojamanager
     plan: free
 
-  # 2. O Serviço da Aplicação Web (Laravel)
+  # O serviço da aplicação web
   - type: web
-    name: estacoes-estoque # Mude para um nome único, se desejar
+    name: estacoes-estoque
     runtime: docker
     dockerfilePath: ./Dockerfile
-    # AQUI ESTÁ A CORREÇÃO:
-    # Este comando roda automaticamente antes de cada novo deploy.
-    preDeploy:
-      command: "php artisan migrate --force"
+    # AQUI ESTÁ A CORREÇÃO FINAL:
+    # Dizemos ao Render para executar nosso script de inicialização.
+    startCommand: "./start.sh"
     envVars:
       - key: APP_URL
         fromService:
           type: web
-          name: estacoes-estoque # Deve ser o mesmo nome deste serviço
+          name: estacoes-estoque
       - key: DB_CONNECTION
         value: pgsql
-      - key: DB_HOST # O Render preenche isso a partir do banco de dados abaixo
+      - key: DB_HOST
         fromService:
           type: pserv
-          name: lojamanager # O nome do seu serviço de banco de dados
+          name: meu-app-db
           property: host
       - key: DB_PORT
         fromService:
           type: pserv
-          name: lojamanager
+          name: meu-app-db
           property: port
       - key: DB_DATABASE
         fromService:
           type: pserv
-          name: lojamanager
+          name: meu-app-db
           property: database
       - key: DB_USERNAME
         fromService:
           type: pserv
-          name: lojamanager
+          name: meu-app-db
           property: user
       - key: DB_PASSWORD
         fromService:
           type: pserv
-          name: lojamanager
+          name: meu-app-db
           property: password
-      # Adicione sua APP_KEY aqui ou no dashboard em "Secret Files"
       - key: base64:N557P0A7ZKbUAmna9L516DhZi0vPln/ayoJ48b9EWZI=
-        generateValue: true # Ou cole a sua chave aqui com 'value:'
+        generateValue: true
       - key: APP_ENV
         value: production
       - key: APP_DEBUG
